[gd_scene load_steps=3 format=3 uid="uid://chyhiqr3wyx1t"]

[ext_resource type="Script" uid="uid://dyergad3vi7vm" path="res://shoot_cooldown_bar.gd" id="1_f788v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f788v"]
bg_color = Color(0.652506, 0, 0.157565, 1)

[node name="ShootCooldownBar" type="Node2D"]
script = ExtResource("1_f788v")

[node name="ResetCooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DecreaseProgressBar" type="Timer" parent="."]

[node name="ShakeTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="ProgressBarContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 56.0
offset_bottom = 256.0

[node name="ProgressBar" type="ProgressBar" parent="ProgressBarContainer"]
offset_right = 56.0
offset_bottom = 256.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/fill = SubResource("StyleBoxFlat_f788v")
step = 10.0
fill_mode = 3

[connection signal="timeout" from="ResetCooldownTimer" to="." method="_on_reset_cooldown_timer_timeout"]
[connection signal="timeout" from="DecreaseProgressBar" to="." method="_on_decrease_progress_bar_timeout"]
[connection signal="timeout" from="ShakeTimer" to="." method="_on_shake_timer_timeout"]
